add some suggests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,10 @@ export(BH_2)
 export(BH_3)
 export(BH_4)
 export(BH_5)
+export(BH_abundance_1)
+export(BH_abundance_2)
 export(BH_abundance_3)
+export(BH_abundance_4)
 export(BH_abundance_5)
 export(CompetitiveAbility)
 export(ER_SEbootstrap)
