--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,13 +3,12 @@ Type: Package
 Title: Tools to calculate species coexistence
 Version: 0.1
 Date: 2017-12-30
-Authors@R: c(person("David", "Garcia-Callejas", role = c("aut", "cre"), email = "david.garcia.callejas@gmail.com", comment = c(ORCID = "")),
+Authors@R: c(person("David", "Garcia-Callejas", role = c("aut", "cre"), email = "david.garcia.callejas@gmail.com", comment = c(ORCID = "0000-0001-6982-476X")),
   person("Ignasi", "Bartomeus", role = c("aut"), comment = c(ORCID = "0000-0001-7893-4389")),
   person("Oscar", "Godoy", role = c("aut"), email = "", comment = c(ORCID = "")),
-  person("Maxime", "Lancelot", role = c("ctb")),
-  person("", "", role = c("rev")))
+  person("Maxime", "Lancelot", role = c("ctb"))
 Description: ...
-License: MIT + file LICENSE
+License: MIT + file LICENCE
 Depends:
   R (>= 3.5)
 Imports:
