--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: cxr
 Type: Package
-Title: A toolbox for modelling species coexistence in R
+Title: A Toolbox for Modelling Species Coexistence in R
 Version: 0.1
 Date: 2017-12-30
 Authors@R: c(person("David", "Garcia-Callejas", role = c("aut", "cre"), 
