--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,14 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
 language: R
+
 cache: packages
-os:
-  - linux
-  - osx
+
+addons:
+  apt:
+    packages:
+    - tcl8.6-dev
+    - tk8.6-dev
+
+  
+  
