update doc and work in progress

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,8 @@
 S3method(summary,cxr_er_fit)
 S3method(summary,cxr_pm_fit)
 S3method(summary,cxr_pm_multifit)
+export()
 export(AvgFitnessRatio)
-export(NicheOverlap)
 export(PredictAbundances)
 export(SpeciesFitness)
 export(cxr_er_bootstrap)
