--- a/.travis.yml
+++ b/.travis.yml
@@ -31,3 +31,6 @@ r_binary_packages:
   
 r_build_args: --resave-data
   
+before_install:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
