--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,12 @@ S3method(summary,cxr_er_fit)
 S3method(summary,cxr_pm_fit)
 S3method(summary,cxr_pm_multifit)
 export(AvgFitnessRatio)
+export(BH_niche_overlap)
+export(LV_niche_overlap)
+export(LW_niche_overlap)
 export(NicheOverlap)
 export(PredictAbundances)
+export(RK_niche_overlap)
 export(SpeciesFitness)
 export(cxr_er_bootstrap)
 export(cxr_er_fit)
@@ -20,9 +24,26 @@ export(model_abundBH2)
 export(model_abundBH3)
 export(model_abundBH4)
 export(model_abundBH5)
+export(niche_overlap)
 export(pm_BH_alpha_global_lambdacov_none_alphacov_none)
 export(pm_BH_alpha_none_lambdacov_none_alphacov_none)
 export(pm_BH_alpha_pairwise_lambdacov_global_alphacov_global)
 export(pm_BH_alpha_pairwise_lambdacov_global_alphacov_pairwise)
 export(pm_BH_alpha_pairwise_lambdacov_none_alphacov_none)
+export(pm_LV_alpha_global_lambdacov_none_alphacov_none)
+export(pm_LV_alpha_none_lambdacov_none_alphacov_none)
+export(pm_LV_alpha_pairwise_lambdacov_global_alphacov_global)
+export(pm_LV_alpha_pairwise_lambdacov_global_alphacov_pairwise)
+export(pm_LV_alpha_pairwise_lambdacov_none_alphacov_none)
+export(pm_LW_alpha_global_lambdacov_none_alphacov_none)
+export(pm_LW_alpha_none_lambdacov_none_alphacov_none)
+export(pm_LW_alpha_pairwise_lambdacov_global_alphacov_global)
+export(pm_LW_alpha_pairwise_lambdacov_global_alphacov_pairwise)
+export(pm_LW_alpha_pairwise_lambdacov_none_alphacov_none)
+export(pm_RK_alpha_global_lambdacov_none_alphacov_none)
+export(pm_RK_alpha_none_lambdacov_none_alphacov_none)
+export(pm_RK_alpha_pairwise_lambdacov_global_alphacov_global)
+export(pm_RK_alpha_pairwise_lambdacov_global_alphacov_pairwise)
+export(pm_RK_alpha_pairwise_lambdacov_none_alphacov_none)
+export(species_fitness)
 import(stats)
