--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,13 +4,7 @@ S3method(summary,cxr_er_fit)
 S3method(summary,cxr_pm_fit)
 S3method(summary,cxr_pm_multifit)
 export(AvgFitnessRatio)
-export(BH_niche_overlap)
-export(LV_niche_overlap)
-export(LW_niche_overlap)
-export(NicheOverlap)
 export(PredictAbundances)
-export(RK_niche_overlap)
-export(SpeciesFitness)
 export(cxr_er_bootstrap)
 export(cxr_er_fit)
 export(cxr_generate_test_data)
@@ -19,6 +13,12 @@ export(cxr_pm_fit)
 export(cxr_pm_multifit)
 export(er_BH_lambdacov_global_effectcov_global_responsecov_global)
 export(er_BH_lambdacov_none_effectcov_none_responsecov_none)
+export(er_LV_lambdacov_global_effectcov_global_responsecov_global)
+export(er_LV_lambdacov_none_effectcov_none_responsecov_none)
+export(er_LW_lambdacov_global_effectcov_global_responsecov_global)
+export(er_LW_lambdacov_none_effectcov_none_responsecov_none)
+export(er_RK_lambdacov_global_effectcov_global_responsecov_global)
+export(er_RK_lambdacov_none_effectcov_none_responsecov_none)
 export(model_abundBH1)
 export(model_abundBH2)
 export(model_abundBH3)
