--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,3 +47,4 @@ export(pm_RK_alpha_pairwise_lambdacov_global_alphacov_pairwise)
 export(pm_RK_alpha_pairwise_lambdacov_none_alphacov_none)
 export(species_fitness)
 import(stats)
+importFrom(utils,combn)
