--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(er_LW_lambdacov_global_effectcov_global_responsecov_global)
 export(er_LW_lambdacov_none_effectcov_none_responsecov_none)
 export(er_RK_lambdacov_global_effectcov_global_responsecov_global)
 export(er_RK_lambdacov_none_effectcov_none_responsecov_none)
+export(fitness_ratio)
 export(model_abundBH1)
 export(model_abundBH2)
 export(model_abundBH3)
