update abundance projections

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,13 @@ S3method(summary,cxr_er_fit)
 S3method(summary,cxr_pm_fit)
 S3method(summary,cxr_pm_multifit)
 export(AvgFitnessRatio)
+export(BH_project_alpha_global_lambdacov_none_alphacov_none)
+export(BH_project_alpha_none_lambdacov_none_alphacov_none)
+export(BH_project_alpha_pairwise_lambdacov_global_alphacov_global)
+export(BH_project_alpha_pairwise_lambdacov_global_alphacov_pairwise)
+export(BH_project_alpha_pairwise_lambdacov_none_alphacov_none)
 export(PredictAbundances)
+export(abundance_projection)
 export(cxr_er_bootstrap)
 export(cxr_er_fit)
 export(cxr_generate_test_data)
@@ -20,7 +26,6 @@ export(er_LW_lambdacov_none_effectcov_none_responsecov_none)
 export(er_RK_lambdacov_global_effectcov_global_responsecov_global)
 export(er_RK_lambdacov_none_effectcov_none_responsecov_none)
 export(fitness_ratio)
-export(model_abundBH1)
 export(model_abundBH2)
 export(model_abundBH3)
 export(model_abundBH4)
