--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ export(BH_project_alpha_pairwise_lambdacov_global_alphacov_pairwise)
 export(BH_project_alpha_pairwise_lambdacov_none_alphacov_none)
 export(PredictAbundances)
 export(abundance_projection)
+export(avg_fitness_diff)
+export(competitive_ability)
 export(cxr_er_bootstrap)
 export(cxr_er_fit)
 export(cxr_generate_test_data)
