add metapopulation functions: local check is ok

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,8 @@ export(RK_project_alpha_pairwise_lambdacov_global_alphacov_pairwise)
 export(RK_project_alpha_pairwise_lambdacov_none_alphacov_none)
 export(abundance_projection)
 export(avg_fitness_diff)
+export(build_param)
+export(calculate_densities)
 export(competitive_ability)
 export(cxr_er_bootstrap)
 export(cxr_er_fit)
@@ -60,8 +62,15 @@ export(cxr_generate_test_data)
 export(cxr_pm_bootstrap)
 export(cxr_pm_fit)
 export(cxr_pm_multifit)
+export(densities_to_df)
+export(fill_demography_matrix)
+export(fill_dispersal_matrix)
+export(fill_transition_matrix)
 export(fitness_ratio)
+export(generate_vital_rate_coefs)
 export(niche_overlap)
 export(species_fitness)
+export(vec_permutation_matrices)
+export(vital_rate)
 import(stats)
 importFrom(utils,combn)
